# technion-introduction-to-cs-homeworks

./: CMakeLists.txt
hw0/: hw0q1.c
hw1/: hw1q1.c  hw1q2.c  hw1q3.c
hw2/: hw2q1.c  hw2q2.c
